refactor: 예금 추천 로직 personaId 직접 조회 방식으로 변경