@@ -5,23 +5,20 @@ import org.springframework.stereotype.Service;
 import team2.pjt12.matchumoney.domain.personadeposit.dto.PersonaDepositDTO;
 import team2.pjt12.matchumoney.domain.personadeposit.dto.PersonaDepositResponseDTO;
 import team2.pjt12.matchumoney.domain.personadeposit.mapper.PersonadepositMapper;
-import team2.pjt12.matchumoney.domain.user.mapper.UserMapper;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PersonadepositServiceImpl implements PersonadepositService {
 
-    private final UserMapper userMapper;
     private final PersonadepositMapper personadepositMapper;
     private static final int RECOMMENDATION_LIMIT = 3;
 
+    // personaId로 personaName 조회
     @Override
-    public PersonaDepositResponseDTO getRecommendedDeposit(Long userId) {
-        Long personaId = userMapper.selectPersonaIdByUserId(userId);
+    public PersonaDepositResponseDTO getRecommendedDeposit(Long personaId) {
         String personaName = personadepositMapper.selectPersonaNameById(personaId);
         List<PersonaDepositDTO> recommendedDeposits = getRandomizedDeposits(personaId);
 
@@ -33,8 +30,7 @@ public class PersonadepositServiceImpl implements PersonadepositService {
         List<PersonaDepositDTO> allDeposits = personadepositMapper.selectDepositsByPersonaId(personaId);
         Collections.shuffle(allDeposits);
         return allDeposits.stream()
-                .limit(RECOMMENDATION_LIMIT)
-                .collect(Collectors.toList());
+                .limit(RECOMMENDATION_LIMIT).toList();
     }
 
     // build
